ex1.11/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sharefile-svc
spec:
  type: ClusterIP
  selector:
    app: sharefile
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
