ex1.11/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sharefile-ing
spec:
  rules:
    - http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sharefile-svc
              port:
                number: 2345
        - path: /pingpong
          pathType: Prefix
          backend:
            service:
              name: pingpong-svc
              port:
                number: 3456
